--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header>
-			<input type="text" placeholder="Search" name="search"></input>
+			<input type="text" placeholder="Search" name="search" id="search"></input>
 	</header>
 
 	<main>
