--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<title>Photo Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" href="js/lightbox/css/lightbox.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet"  href="js/photo-info.js">
+	<link rel="stylesheet"  href="js/search.js">
 </head>
 
 
@@ -15,23 +18,38 @@
 <body>
 
 	<header>
-			<input type="text" placeholder="Search" name="search" id="search"></input>
+			<input type="text" placeholder="Search" name="search" id="search-nodata" data-list=".list"></input>
 	</header>
 
-	<main>
-		<a href="Photos/01.jpg"><img src="Photos/Thumbnails/01.jpg"></a>
-		<a href="Photos/02.jpg"><img src="Photos/Thumbnails/02.jpg"></a>
-		<a href="Photos/03.jpg"><img src="Photos/Thumbnails/03.jpg"></a>
-		<a href="Photos/04.jpg"><img src="Photos/Thumbnails/04.jpg"></a>
-		<a href="Photos/05.jpg"><img src="Photos/Thumbnails/05.jpg"></a>
-		<a href="Photos/06.jpg"><img src="Photos/Thumbnails/06.jpg"></a>
-		<a href="Photos/07.jpg"><img src="Photos/Thumbnails/07.jpg"></a>
-		<a href="Photos/08.jpg"><img src="Photos/Thumbnails/08.jpg"></a>
-		<a href="Photos/09.jpg"><img src="Photos/Thumbnails/09.jpg"></a>
-		<a href="Photos/10.jpg"><img src="Photos/Thumbnails/10.jpg"></a>
-		<a href="Photos/11.jpg"><img src="Photos/Thumbnails/11.jpg"></a>
-		<a href="Photos/12.jpg"><img src="Photos/Thumbnails/12.jpg"></a>
+	<main class="list">
+		<!--<a href="Photos/01.jpg" data-lightbox="gallery" data-title="Hay Bales - I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="Photos/Thumbnails/01.jpg" alt="Hay Bales"></a>
+		<a href="Photos/02.jpg" data-lightbox="gallery" data-title="Lake - The lake was so calm today. We had a great view of the snow on the mountains from here." alt="Lake"><img src="Photos/Thumbnails/02.jpg"></a>
+		<a href="Photos/03.jpg" data-lightbox="gallery" data-title="Canyon - I hiked to the top of the mountain and got this picture of the canyon and trees below." alt="Canyon"><img src="Photos/Thumbnails/03.jpg"></a>
+		<a href="Photos/04.jpg" data-lightbox="gallery" data-title="Iceberg - It was amazing to see an iceberg up close, it was so cold but didn’t snow today." alt="Iceberg" ><img src="Photos/Thumbnails/04.jpg"></a>
+		<a href="Photos/05.jpg" data-lightbox="gallery" data-title="Desert - The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons." alt="Desert"><img src="Photos/Thumbnails/05.jpg"></a>
+		<a href="Photos/06.jpg" data-lightbox="gallery" data-title="Fall - Fall is coming, I love when the leaves on the trees start to change color." alt="Fall"><img src="Photos/Thumbnails/06.jpg"></a>
+		<a href="Photos/07.jpg" data-lightbox="gallery" data-title="Plantation - I drove past this plantation yesterday, everything is so green!" alt="Plantation"><img src="Photos/Thumbnails/07.jpg"></a>
+		<a href="Photos/08.jpg" data-lightbox="gallery" data-title="Dunes - My summer vacation to the Oregon Coast. I love the sandy dunes!" alt="Dunes"><img src="Photos/Thumbnails/08.jpg"></a>
+		<a href="Photos/09.jpg" data-lightbox="gallery" data-title="Countryside Lane - We enjoyed a quiet stroll down this countryside lane." alt="Countryside"><img src="Photos/Thumbnails/09.jpg"></a>
+		<a href="Photos/10.jpg" data-lightbox="gallery" data-title="Sunset - Sunset at the coast! The sky turned a lovely shade of orange." alt="Sunset"><img src="Photos/Thumbnails/10.jpg"></a>
+		<a href="Photos/11.jpg" data-lightbox="gallery" data-title="Cave - I did a tour of a cave today and the view of the landscape below was breathtaking." alt="Cave"><img src="Photos/Thumbnails/11.jpg"></a>
+		<a href="Photos/12.jpg" data-lightbox="gallery" data-title="Bluebells - I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in." alt="Bluebells"><img src="Photos/Thumbnails/12.jpg"></a>-->
 	</main>
+
+<script src="js/jquery-2.2.3.min.js"></script>
+<script src="js/lightbox/js/lightbox.js"></script>
+<script>
+    lightbox.option({
+      'wrapAround': true
+    })
+</script>
+<script src="js/jquery.hideseek.min.js"></script>
+<script>
+$(document).ready(function() {
+	$('#search-nodata').hideseek({
+  		nodata: 'No results found',
+  		attribute: 'data-title'
+})});</script>
 
 </body>
 
